bullhead: overlay: Enable fingerprint swipe gesture
Bug: 32875729
Bug: 33251689
Change-Id: I50533b4464acdfe0b98f0d9b74502c8ae0c07582

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -396,4 +396,8 @@
     <string-array name="config_disabledUntilUsedPreinstalledCarrierApps">
         <item>com.google.android.apps.tycho</item>
     </string-array>
+
+   <!-- Enable system navigation keys. -->
+   <bool name="config_supportSystemNavigationKeys">true</bool>
+
 </resources>
